--- a/src/components/atoms/WhatsAppDesktop.astro
+++ b/src/components/atoms/WhatsAppDesktop.astro
@@ -1,5 +1,5 @@
 ---
-import Whatsapp from "../../assets/whatsapp.svg";
+import Whatsapp from "@assets/whatsapp.svg";
 import QrCode from "./QrCode.astro";
 ---
 
