--- a/src/components/views/Currently.astro
+++ b/src/components/views/Currently.astro
@@ -1,8 +1,24 @@
 ---
 import Slide from "@layouts/Slide.astro";
 import SlideHeader from "@atoms/SlideHeader.astro";
+import Me from "@assets/currently/me.webp";
+import Image from "astro/components/Image.astro";
 ---
 
 <Slide>
     <SlideHeader title="Currently" subtitle="Product Lead @ Dcycle" />
+    
+    <div class="flex flex-col gap-8 max-w-lg relative">
+        <p class="text-xl font-family-dm">Leading AI product initiatives, frontend architecture, and design systems.</p>
+        
+        <ul class="text-lg text-gray-600 flex flex-col gap-2 font-family-dm list-disc list-inside">
+            <li>AI Team Product Lead</li>
+            <li>Frontend & Design System Lead</li>
+            <li>Product Engineer</li>
+            <li>Professional Gen Z translator</li>
+            <li>Meme Connoisseur</li>
+        </ul>
+    </div>
+    
+    <Image src={Me} alt="Me" class="max-sm:w-[290px] max-w-[500px] absolute max-sm:bottom-0 max-sm:right-1/2 max-sm:translate-x-1/2 bottom-0 right-20" />
 </Slide>
