--- a/src/components/Slider.astro
+++ b/src/components/Slider.astro
@@ -4,7 +4,7 @@ import Button from "./atoms/Button.astro";
 import { ArrowLeft, ArrowRight, Maximize, Minimize } from "@lucide/astro";
 ---
 
-<div id="slider" class="border border-primary-grey max-sm:px-3 max-sm:py-2 px-5 py-4 max-sm:rounded-2xl rounded-3xl flex items-center justify-between absolute max-sm:top-6 sm:bottom-10 left-1/2 -translate-x-1/2 z-10 max-sm:w-[calc(100vw-96px)] w-[500px] shadow-lg">
+<div id="slider" class="border bg-primary-white border-primary-grey max-sm:px-3 max-sm:py-2 px-5 py-4 max-sm:rounded-2xl rounded-3xl flex items-center justify-between absolute max-sm:top-6 sm:bottom-10 left-1/2 -translate-x-1/2 z-10 max-sm:w-[calc(100vw-96px)] w-[500px] shadow-lg">
     <div class="flex items-center max-sm:gap-2 gap-3">
         <Button id="slider-button-left" icon={ArrowLeft} size={14} />
         <div class="flex items-center max-sm:gap-2 gap-3">
