--- a/src/components/views/Projects.astro
+++ b/src/components/views/Projects.astro
@@ -19,7 +19,7 @@ const projects = [
     <div class="flex max-sm:flex-col justify-center items-center gap-8 max-sm:gap-6 mx-auto max-sm:mt-10">
         {projects.map(({image, link, name}) => (
             <a 
-                class="flex-1 max-w-xs max-sm:max-w-[250px] group max-sm:w-full" 
+                class="flex-1 max-w-[300px] sm:mt-10 max-sm:max-w-[250px] group max-sm:w-full" 
                 href={link} 
                 target="_blank" 
                 rel="noopener noreferrer"
