--- a/src/components/views/Me.astro
+++ b/src/components/views/Me.astro
@@ -15,13 +15,11 @@ const images = [me, vr,cat];
     <div class="fixed left-1/2 top-1/2 -translate-x-1/2 -translate-y-1/2">
         <div class="relative flex items-center gap-4 justify-center w-[70%] mx-auto max-h-[600px]">
             {images.map((image, index) => (
-                <div class="flex-1 flex justify-center">
                     <Image 
                         src={image} 
                         alt="Me" 
-                        class={`min-w-[250px] h-[500px] object-cover rounded-lg ${index === 1 && "mb-20"}`}
+                        class={`max-sm:h-[300px] max-sm:min-w-[80px] min-w-[250px] h-[500px] object-cover rounded-lg ${index === 1 && "mb-20"}`}
                     />
-                </div>
             ))}
         <Sphere />
         </div>
