update image base urls

--- a/src/components/Slider.astro
+++ b/src/components/Slider.astro
@@ -27,8 +27,7 @@ import { ArrowLeft, ArrowRight, Maximize, Minimize } from "@lucide/astro";
 </div>
 
 <script>
-    import { isMaximized, sectionCount } from '../store.js';
-    import { pageIndex } from '../store.js';
+    import { isMaximized, sectionCount, pageIndex } from '../store.ts';
 
     // Slider buttons logic
     const sliderButtonLeft = document.getElementById('slider-button-left')
